trunk/Archive2/5d/818cda1c817c23/output
main.cpp:7:4: error: unknown type name 'typdef'; did you mean 'typedef'?
   typdef int errcode;
   ^~~~~~
   typedef
main.cpp:15:4: error: unknown type name 'typdef'; did you mean 'typedef'?
   typdef Foo* FooHandle;
   ^~~~~~
   typedef
main.cpp:37:9: warning: extra tokens at end of #endif directive [-Wextra-tokens]
 #endif FOO_HPP
        ^
        //
main.cpp:45:11: fatal error: 'foo_cpp.hpp' file not found
 #include "foo_cpp.hpp"
          ^
1 warning and 3 errors generated.
